Remove security manager from scripts